--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -8,7 +8,21 @@
 
     nav li {flex-basis: 25%;}
 
+    nav ul li a {font-size: 1.3rem;}
+
     header h1 {
         font-size: 2rem;
+    }
+
+    footer {
+        font-size: 1.2rem;
+    }
+
+    main {
+        max-width: 75%;
+    }
+
+    .personas img {
+        width: 500px;
     }
 }
