--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+
 * {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -6,7 +9,11 @@
 
 body {
     font-size: 16px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Open Sans", sans-serif;
+}
+
+nav, h1, h2, footer {
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 /* Header rules  #E0995E */
@@ -19,10 +26,10 @@ header{
     color: white;
 }
 
-header h1 {font-size: 1.5rem;}
+header h1 {font-size: 1.3rem;}
 
 header picture {
-    width: 100px;
+    width: 75px;
     height: auto;
 }
 
@@ -59,7 +66,7 @@ main section {
 
 footer {
     width: 100%;
-    padding: 5px;
+    padding: 15px;
     background-color: #4F5D73;
     text-align: center;
     color: white;
@@ -94,4 +101,16 @@ footer {
 /************************************ Audience page rules **************************************/
 section ul li {
     margin: 25px 0 25px 0;
+}
+
+.personas {
+    margin-top: 75px;
+}
+
+.personas li {margin: 10px;}
+
+.personas img {
+    width:100%;
+    height: auto;
+    border-radius: 5px;
 }
