--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -56,6 +56,8 @@ nav ul li {
     cursor: pointer;
 }
 
+nav ul li .active {background-color: #e48538;}
+
 main {min-height: 50vh;}
 
 main section {
