--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -3,13 +3,12 @@
     nav button {display: none;}
 
     
-    nav ul.hide {
+    nav ul#ourNav {
         display: flex;
-        flex-basis: 1;
     }
 
     nav ul {margin-left: 10px;}
-
+    
     nav ul li a {
         border: none;
         padding: .8rem 1rem;
@@ -27,14 +26,14 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 
-  main section .contact picture {
+  main section .contact div.map {
     display: grid;
-    width: 300px;
+    width: 100%;
     height: auto;
   }
 
-  main section .contact picture iframe {
-    width: 120%;
+  main section .contact div.map iframe {
+    width: 100%;
     height: 200px;
     border-radius: 10px;
   }
