--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -108,7 +108,7 @@ main h1 {
   margin-bottom: 50px;
 }
 
-main article {
+main .gallery {
   display: grid;
   grid-template-columns: 1fr;
   width: 100%;
@@ -116,7 +116,7 @@ main article {
   gap: 100px 10px;
 }
 
-main article picture {
+main .gallery figure {
     width: 300px;
     text-align: center;
     border-radius: 5px;
@@ -124,28 +124,26 @@ main article picture {
     background-color: #ddd;
     overflow: hidden;
     cursor: pointer;
+    margin: 0;
 }
 
-main article picture:hover {box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.5);}
-
-main picture legend {
+main figure figcaption {
   width: 100%;
   padding-top: 10px;
   padding-bottom: 10px;
   font-size: 18px;
 }
 
-main picture img {
+main figure img {
   width: 100%;
   height: auto;
   
 }
-
-picture img[data-src] {
+main figure img[data-src] {
   filter: blur(0.05em);
 }
 
-picture img {
+main figure img {
   filter: blur(0em);
   transition: filter 0.5s;
 }
