--- a/lesson8/css/style.css
+++ b/lesson8/css/style.css
@@ -43,6 +43,10 @@ tbody tr:nth-child(even) {
 	background-color: #e7ffed;
 }
 
+tbody tr:nth-child(5) td:first-child {
+    font-style: italic;
+}
+
 #colored {
     color: #e7f0ed;
     background-color: #628ca6;
