--- a/lesson9/css/prophets.css
+++ b/lesson9/css/prophets.css
@@ -40,6 +40,7 @@ section img {
     width: 70%;
     height: auto;
     border-radius: 10px;
+    box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.39);
 }
 
 footer {
