--- a/lesson9/css/medium.css
+++ b/lesson9/css/medium.css
@@ -15,77 +15,24 @@
         font-size: 1rem;
     }
 
-  main section .article img {
-    width: 350px;
-    float: right;
-    margin: 10px 0 10px 10px;
-  }
+    section {
+      flex-direction: row;
+      padding: 20px;
+    }
 
-  main section .contact {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
+    section:nth-child(2) {flex-direction: row-reverse;}
 
-  main section .contact div.map {
-    display: grid;
-    width: 100%;
-    height: auto;
-  }
+    section div {
+      width: 390px;
+    }
+    section img {
+      width: 40%;
+      margin-left: 50px;
+    }
 
-  main section .contact div.map iframe {
-    width: 100%;
-    height: 200px;
-    border-radius: 10px;
-  }
-
-  /* Forecast style rules */
-  main .forecast-section {
-    display: block;
-  }
-
-  main section .forecast {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-  }
-
-  main section .forecast div {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      width: 100%;
-      height: 150px;
-      border-radius: 5px;
-      background-color: #ddd;
-
-  }
-
- .forecast div h3 {
-     background-color: #e48538;
-     margin: 0;
-     width: 100%;
-     padding: 10px;
-     margin-bottom: 20px;
-     text-align: center;
- }
-
- .forecast div img {
-     width: 50px;
-     height: auto;
-     border-radius: 10px;
-     margin-bottom: 10px;
- }
-
-
- .hero-description {
-   position: absolute;
-   top: 20px;
-   left: 20px;
-   padding: 20px;
-   margin: 0;
-   background-color: #ccc;
-   border-radius: 5px;
- }
-
+    section:nth-child(2) img {
+      margin-right: 50px;
+      margin-left: 0;
+    }
 
 }
