--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -101,56 +101,67 @@ nav ul li .active {
 
 main {
   min-height: 50vh;
-}
-
-main h1 {
-  margin-left: 20px;
-}
-
-main .hero-parent {
-  max-width: 1024px;
-  position: relative;
-}
-
-.hero-description {
   margin: 20px;
-  padding: 20px;
-  background-color: #ccc;
-  border-radius: 5px;
 }
 
-main picture {
+main h1 {margin-top: 50px;}
+
+main .banner {
+  position: relative;
+  max-width: 1024px;
+  margin: 75px 0;
+}
+
+main .banner img{
   width: 100%;
-  height: auto;
+}
+main p {font-size: 1.3rem;}
+
+main .town-cards {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  justify-items: center;
 }
 
-main picture img {
-  width: 100%;
+section {
+  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.39);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  background-color: #ddd;
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 25px;
 }
 
-main section {
-  margin: 50px 20px 0 20px;
+section div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: max-content;
 }
 
-/* We notice that the forecast is hidden in the small view */
-main .forecast-section {
-  display: none;
+section div h2 {height: 25px;}
+section div h3 {
+  text-align: center;
+  max-width: 259px;
+  height: 43px;
 }
 
-main section .article img {
-  width: 90%;
+section img {
+  width: 80%;
   height: auto;
   border-radius: 10px;
+  box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.39);
+  margin-top: 50px;
+  margin-bottom: 25px;
 }
 
-main section .contact {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
 
-main section .contact div.map {
-  display: none;
-}
 
 div#footer-wrapper {
   background-color: #4f5d73;
