--- a/lesson11/css/home/small.css
+++ b/lesson11/css/home/small.css
@@ -104,7 +104,11 @@ main {
   margin: 20px;
 }
 
-main h1 {margin-top: 50px;}
+main h1 {
+  margin-top: 50px;
+  margin-bottom: 16px;
+  font-size: 2.5rem;
+}
 
 main .banner {
   position: relative;
@@ -115,13 +119,28 @@ main .banner {
 main .banner img{
   width: 100%;
 }
-main p {font-size: 1.3rem;}
+main p {font-size: 1.3rem;margin: 5px auto;}
 
 main .town-cards {
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
   justify-items: center;
+  margin-bottom: 100px;
+}
+
+main a {
+  border: none;
+  background-color: #4f5d73;
+  color: white;
+  border-radius: 10px;
+  padding: .75rem 1.5rem;
+  margin: 0;
+  width: 100%;
+  max-width: 20rem;
+  cursor: pointer;
+  font-size: 1.3rem;
+  text-decoration: none;
 }
 
 section {
