--- a/lesson11/css/preston/small.css
+++ b/lesson11/css/preston/small.css
@@ -104,7 +104,9 @@ main {
 }
 
 main h1 {
-  margin-left: 20px;
+  margin-top: 50px;
+  margin-bottom: 25px;
+  font-size: 2.5rem;
 }
 
 main .hero-parent {
@@ -126,6 +128,7 @@ main picture {
 
 main picture img {
   width: 100%;
+  border-radius: 5px;
 }
 
 main section {
@@ -196,3 +199,11 @@ div.hide-banner {
 
 /* Events */
 section .events ul li {margin: 15px auto;}
+
+section .events {
+  background-color: #4f5d73;
+  padding: 15px;
+  border-radius: 5px;
+  color: white;
+  font-size: 1.1rem;
+}
