final update for the weather site

--- a/lesson11/css/gallery/small.css
+++ b/lesson11/css/gallery/small.css
@@ -104,8 +104,10 @@ main {
 }
 
 main h1 {
+  margin-top: 50px;
   margin-left: 20px;
   margin-bottom: 50px;
+  font-size: 2rem;
 }
 
 main .gallery {
