--- a/lesson11/css/home/large.css
+++ b/lesson11/css/home/large.css
@@ -10,6 +10,13 @@
         grid-template-columns: repeat(3, 1fr);
     }
 
+    main h1 {
+        margin-left: 20px;
+    }
+
+    main p {margin-left: 20px;}
+      
+
     section {
         flex-direction: column;
         padding: 5px;
