--- a/lesson11/css/preston/small.css
+++ b/lesson11/css/preston/small.css
@@ -105,8 +105,9 @@ main {
 
 main h1 {
   margin-top: 50px;
+  margin-left: 20px;
   margin-bottom: 25px;
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 main .hero-parent {
