--- a/lesson11/css/stormcenter/small.css
+++ b/lesson11/css/stormcenter/small.css
@@ -105,7 +105,9 @@ main {
 }
 
 main h1 {
-  margin: 25px 20px;
+  margin-top: 30px;
+  margin-bottom: 0;
+  font-size: 2rem;
 }
 
 main form fieldset  {
